--- a/src/index.css
+++ b/src/index.css
@@ -1297,3 +1297,11 @@ imageViewer__modal-main {
 .paragraph{
     padding: 10px;
 }
+
+.graphicArchiveBox{
+    z-index: 100000000;
+    margin-top: -100px;
+    position: relative;
+}
+
+
