MODELS_FROM_THE_PAST_FOR_THE_FUTURE-99 add hamburger menu

--- a/src/index.css
+++ b/src/index.css
@@ -615,10 +615,7 @@ text {
 }
 
 button{
-    font-family: "sligoil-micro", sans-serif;
-    width: 100%;
-    background-color: var(--main__green);
-    margin-bottom: 10px;
+    background: transparent;
 }
 
 .buttonRandomizer {
