MODELS_FROM_THE_PAST_FOR_THE_FUTURE-99 add hamburger menu

--- a/src/index.css
+++ b/src/index.css
@@ -640,6 +640,16 @@ button{
     margin-right: 10px;
 }
 
+.hamburgerMenu{
+    position: absolute;
+    z-index: 19999999999;
+    left:0;
+    right: 0;
+    height: 40vh;
+    width: 100vw;
+    background: #79aea1;
+}
+
 /* ANIMATIONSSS */
 
 .button-lang{
