MODELS_FROM_THE_PAST_FOR_THE_FUTURE-99 color;

--- a/src/index.css
+++ b/src/index.css
@@ -647,7 +647,7 @@ button{
     right: 0;
     height: 40vh;
     width: 100vw;
-    background: #79aea1;
+    background-color: rgb(235, 253, 250);
 }
 
 /* ANIMATIONSSS */
