--- a/src/index.css
+++ b/src/index.css
@@ -650,6 +650,23 @@ button{
     background-color: rgb(235, 253, 250);
 }
 
+.firstBar {
+    transition: all 0.35s linear;
+    transform: rotate(0deg);
+    transform-origin: 0% 50%;
+    transform: rotate(45deg);
+}
+
+.secondBar {
+    transition: all 0.35s linear;
+    transform: rotate(0deg);
+    transform-origin: 0% 50%;
+    transform: rotate(-45deg);
+}
+
+
+
+
 /* ANIMATIONSSS */
 
 .button-lang{
