MODELS_FROM_THE_PAST_FOR_THE_FUTURE-99 add links to about and language selector.;

--- a/src/index.css
+++ b/src/index.css
@@ -1207,7 +1207,7 @@ imageViewer__modal-main {
     }
 }  @media (max-width: 1224px) {
     .grid--even_3{
-        grid-template-columns: none;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
         grid-auto-flow: dense;
     }
 }
