#MODELS_FROM_THE_PAST_FOR_THE_FUTURE-105 state Closed

--- a/src/index.css
+++ b/src/index.css
@@ -1257,17 +1257,34 @@ imageViewer__modal-main {
 }
 
 @media (max-width: 1224px) {
-    .grid-home-main{
+    .grid-home-main-open{
         display: grid;
         grid-template-rows: 10% 28% 2% 60%;
+        -webkit-animation: animategrid ease-in 0.4s;
+        -moz-animation: animategrid ease 2s;
     }
 }
 
 @media (min-width: 1224px) {
-    .grid-home-main{
+    .grid-home-main-open{
         display: grid;
         grid-template-rows: 10% 48% 2% 40%;
     }
+}
+
+.grid-home-main-closed{
+    display:grid;
+    grid-template-rows: 10% 87% 2% 1%;
+}
+
+@-webkit-keyframes  animategrid {
+    from{grid-template-rows: 10% 28% 2% 60%}
+    to {grid-template-rows: 10% 88% 2%}
+}
+
+@-moz-keyframes animategrid {
+    from{grid-template-rows: 10% 28% 2% 60%}
+    to {grid-template-rows: 10% 88% 2%}
 }
 
 
@@ -1291,6 +1308,16 @@ imageViewer__modal-main {
     z-index: 100000000;
     margin-top: -400px;
     position: relative;
+}
+
+.HomeProjectGridContainer{
+    background: white;
+    top: -100%;
+    transition: top 0.4s;
+}
+
+.closed{
+    top: +100%
 }
 
 
