#MODELS_FROM_THE_PAST_FOR_THE_FUTURE-98 comment: start restructuring color-tagger interface

--- a/src/index.css
+++ b/src/index.css
@@ -1141,9 +1141,14 @@ imageViewer__modal-main {
     grid-template-columns: 30% 70%;
 }
 
+.grid--75_25 {
+    display: grid;
+    grid-template-columns: 75% 25%;
+}
+
 .gridH--even_2{
     display:grid;
-    grid-template-rows: repeat(2, 50%);
+    grid-template-rows: repeat(2, 50vh);
 }
 
 .gridH--even_3{
