--- a/src/index.css
+++ b/src/index.css
@@ -62,9 +62,9 @@ html, body {
     right:0;
     text-rendering: optimizeLegibility;
     cursor: cell;
-    height: 200vh;
     background: linear-gradient(180deg, white 0%,  #fbf2e7 85%);
     scroll-behavior: smooth;
+    orientation: landscape;
 }
 
 div {
@@ -1153,7 +1153,13 @@ imageViewer__modal-main {
 
 .gridH--even_3{
     display:grid;
-    grid-template-rows: repeat(3, 33%);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.gridH--1-2-6-1{
+    display: grid;
+    border: lightpink solid 1px;
+    grid-template-rows: 1fr 2fr 6fr 1fr;
 }
 
 .grid--even_2 {
