#MODELS_FROM_THE_PAST_FOR_THE_FUTURE-113: style font for button.

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,12 @@ div {
     src: local("BackOut"), url(fonts/BackOut.woff2);
 }
 
+text{
+    -webkit-appearance: none;
+    font-family: "KWBio27-Display", sans-serif;
+    font-weight: bold;
+}
+
 .text {
     font-size: 18px;
     padding: 2px
