--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -37,11 +37,11 @@ h1.home {
 }
 
 h2 {
-    font-size: 1vw;
+    font-size: 20px;
 }
 
 h2.main {
-    font-size: 1.5vw;
+    font-size: 33px;
 }
 
 h2.graphic_archive_02{
