MUTATE__ update responsive design for mobile.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -63,6 +63,12 @@ html, body {
     orientation: landscape;
 }
 
+@media screen and (max-width: 740px) {
+    html, body {
+        overflow: auto;
+    }
+}
+
 .centerBox{
     display: flex;
     justify-content: center;
