--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -54,7 +54,9 @@ h2.responsive{
     font-family: "Fungal";
     font-size: 8vw;
     font-weight: bolder;
-    color: rgb(242, 245, 220, 0.7)
+    color: rgb(242, 245, 220, 0.7);
+    mix-blend-mode: difference;
+
 }
 
 h3 {
