--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,12 +7,6 @@ html {
     -moz-transition: all 2s ease;
 }
 
-@media screen and (min-width: 740px) {
-    html {
-        font-size: 125%;
-    }
-}
-
 * {
     padding: 0;
     margin: 0;
@@ -61,6 +55,7 @@ html, body {
     scroll-behavior: smooth;
     orientation: landscape;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
 }
 
 @media screen and (max-width: 740px) {
