--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -24,7 +24,6 @@
 
 .graphic_archive_02 {
     font-family: "Fungal";
-    font-size: 40vh;
     animation: grow 150s ease-in-out infinite;
 }
 
@@ -56,12 +55,22 @@ h2.responsive{
     font-weight: bolder;
     color: rgb(242, 245, 220, 0.7);
     mix-blend-mode: difference;
-
 }
 
 h3 {
     font-size: 0.5rem;
     animation: none;
+}
+
+@media screen and (max-width: 479px) {
+    h1 {
+        font-size: 10vw;
+        line-height: 90%;
+    }
+    h2 {
+        font-size: 8vw;
+        line-height: 95%;
+    }
 }
 
 .about{
