--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,11 @@ html {
     background-blend-mode: color-burn;
 }
 
+.button-dropdown{
+    position: absolute;
+    right: 10vw;
+}
+
 .full-page{
     height: 100vh;
     width: 100vw;
